style.css
@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
    box-sizing: border-box;

    --main-color: #00b894;
    --white-text: white;
    --black-text: #2d3436;
    --color-grey: #E2E8F0;

}

.container {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 4fr;

}


/* Side bar */
.side-bar {
    background-color: var(--main-color);
    grid-row: 1 / 3;

    display: grid;
    grid-template-rows: .5fr 2fr 2fr;
}

.side-bar a {
    color: white;
    text-decoration: none;
    font-size: 24px;
    display: flex;
    gap: 24px;
    padding: 14px 14px 14px 24px;
    align-items: center;
    line-height: 1;
    font-weight: 600;
}

.side-bar a i {
    display: flex;
}

.dash-logo {
    display: flex;
    align-items: center;
    padding: 0px 14px 14px 16px;
    gap: 16px;
}

.logo-container {
    display: grid;
    grid-template-columns:1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 5px;
    width: 40px;
    height: 40px;
}

.logo-block-1 {
    grid-column: 1;
    grid-row: 1 / 3;
}

.logo-block-2 {
    grid-column: 2;
    grid-row: 2/4;
}

.logo-container div {
    background-color: white;
}

#logo-name {
    font-size: 2rem;
    font-weight: 600;
    color: white;
}

.app-nav {
    padding-top: 24px;
}


/* main content */
.main-content{
    background-color: var(--color-grey);
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 20px;
    padding: 20px;

}

.mc-left{
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: auto 1fr;
}

.mc-tr {
    display: grid;
    grid-template-rows: auto 1fr;
}

.mc-bl {
    display: grid;
    grid-template-rows: auto 1fr;
}

.mc-bl-cntnt-container {
    background-color: white;
    border-radius: 10px;
}


.mc-card-container {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: repeat(3, 1fr);
}

.mc-card {
    background-color: white;
    border-radius: 10px;
}

.mc-tr-cntnt-container {
    padding: 20px;
    background-color: white;
    border-radius: 5px;
    display: grid;
    gap: 10px;
    grid-template-rows: repeat(3, auto);
    grid-template-columns: 1fr;
}

.mc-tr-cntnt-container div:not(:last-child) {
    border-bottom: 2px solid var(--color-grey);
    padding-bottom: 10px;
}

h3 {
    padding-bottom: 20px;
}

.mc-bl-cntnt-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-evenly;
    padding: 20px;
    gap: 20px;
}

.mc-bl-profile {
    display: flex;
    gap: 10px;
}

/* header */
.header {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr;

    padding: 0 40px;
}

.hdr-user-info {
    grid-column: 1;
    grid-rows: 1;

    display: grid;
    grid-template-columns: 10% 90% ;
}

#userAT {
    font-size: 1.5rem;
    font-weight: 500;
}

.hdr-user-info-text {
    display: flex;
    flex-direction: column;
    justify-content: center;

}

.hdr-search {
    display: grid;
    align-items: center;

}

.hdr-search form input{
    background-color: #E2E8F0;
    border-radius: 20px;
    width: 650px;
    height: 25px;
    border: none;
    margin-left: 15px;
}

.hdr-user-profile-pfpic {
    background-image: url(img/avatar.png);
    background-size: cover;
    width: 50px;
    height: 50px;
}

.hdr-user-profile {
    grid-row: 1;
    grid-column: 2;

    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 20px;
}

.hdr-user-profile p {
    font-weight: 600;
    font-size: 18px;
}

.hdr-user-profile i {
    font-size: 20px;
}

.hdr-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.hdr-btns {
    background-color: var(--main-color);
    display: grid;
    width: 100px;
    height: 40px;
    border-radius: 20px;
    text-align: center;
    align-items: center;
    color: white;
}

#pfp-big {
    width: 70px;
    height: 70px;
}

